--- a/app/src/main/res/layout/item_doctor.xml
+++ b/app/src/main/res/layout/item_doctor.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="?android:attr/selectableItemBackground">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/photoImageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="6dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +25,7 @@
         android:layout_marginTop="3dp"
         android:ellipsize="end"
         android:lines="1"
-        android:textSize="16sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/photoImageView"
         app:layout_constraintTop_toTopOf="@+id/photoImageView"
@@ -37,7 +38,7 @@
         android:layout_marginStart="6dp"
         android:ellipsize="end"
         android:lines="1"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/photoImageView"
@@ -50,7 +51,7 @@
         app:constraint_referenced_ids="photoImageView, doctorProfessionTextView"
         app:barrierDirection="bottom"/>
     <Space
-        android:layout_height="60dp"
+        android:layout_height="16dp"
         android:layout_width="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/barrier"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
