--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".HomeFragment"
+    tools:context=".home.HomeFragment"
     android:id="@+id/fragmentHome"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
