--- a/app/src/main/res/navigation/nav_graph_application.xml
+++ b/app/src/main/res/navigation/nav_graph_application.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fragmentHome"
-        android:name="com.example.hospitalproject.home.HomeFragment"
+        android:name="com.example.hospitalproject.fragments.notification.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/fragmentNotifications"
-        android:name="com.example.hospitalproject.notification.NotificationsFragment"
+        android:name="com.example.hospitalproject.fragments.notification.NotificationsFragment"
         android:label="fragment_notifications"
         tools:layout="@layout/fragment_notifications" />
     <fragment
@@ -26,7 +26,7 @@
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/registrationFragment"
-        android:name="com.example.hospitalproject.home.registration.RegistrationFragment"
+        android:name="com.example.hospitalproject.home.home.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" />
 </navigation>
